--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     </head>
     <body>
         <h1>mijn portfolio</h1>
+        <h2>inhoud:</h2>
+      <ul>
+          <li>over mij</li>
+          <li>hobbies</>
+      </ul>
     </body>
 </html>
