--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>inhoud:</h2>
       <ul>
           <li>over mij</li>
-          <li>hobbies</>
+          <li>hobbies</li>
       </ul>
     </body>
 </html>
