--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
           <li>over mij</li>
           <li>hobbies</li>
       </ul>
+        <meta http-equiv="refresh" content="7; url='https://www.w3docs.com'" />
     </body>
 </html>
