--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
         <h1>mijn portfolio</h1>
         <h2>inhoud:</h2>
       <ul>
-          <li>over mij</li>
+          <li> href="page2.html" over mij</li>
           <li>hobbies</li>
       </ul>
-        <meta http-equiv="refresh" content="7; url='https://www.w3docs.com'" />
     </body>
 </html>
