--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <h1>mijn portfolio</h1>
         <h2>inhoud:</h2>
       <ul>
-          <li> href="page2.html" over mij</li>
+          <li> <a href="page2.html"> over mij</li>
           <li>hobbies</li>
       </ul>
     </body>
