--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>inhoud:</h2>
       <ul>
           <li> <a href="page2.html" over mij</li> </a>
-          <li>hobbies</li>
+        <li><a href="page3.html" hobbies</li> </a>
       </ul>
     </body>
 </html>
