--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h1>mijn portfolio</h1>
         <h2>inhoud:</h2>
       <ul>
-        <li> <a href="page2.html" over mij</li> </a>
-        <li> <a href="page3.html" hobbies</li> </a>
+          <li> <a href="page2.html" over mij </a> </li>
+          <li> <a href="page3.html" hobbies </a> </li>
       </ul>
     </body>
 </html>
