--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <h1>mijn portfolio</h1>
         <h2>inhoud:</h2>
       <ul>
-        <a> <li> href="page2.html" over mij </li> </a>
-        <a> <li> href="page3.html" hobbies </li> 
+        <a> href="page2.html" <li> over mij </li> </a>
+        <a> href="page3.html" <li> hobbies </li> 
       </ul>
     </body>
 </html>
