--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h2>inhoud:</h2>
       <ul>
         <li> over mij </li>
-          <li> <a href="page2.html" hobbies </li> </a>
+          <li> <a href="page2.html" hobbies </a> </li>
       </ul>
     </body>
 </html>
