--- a/page2.html
+++ b/page2.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="nl">
+    <head>
+      <title>portfolio</title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="css/opmaak.css">
+    </head>
+    <body>
+        <h1>over mij</h1>
+    </body>
+</html>
