--- a/page2.html
+++ b/page2.html
@@ -7,5 +7,6 @@
     </head>
     <body>
         <h1>over mij</h1>
+        <p>ik ben Aleph Knobbout. ik ben 16 jaar oud. ik woon in goes en zit op het goese lyceum. </p>
     </body>
 </html>
