--- a/page2.html
+++ b/page2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-      <title>portfolio</title>
+      <title>over mij</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/opmaak.css">
     </head>
