--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <h1>mijn portfolio</h1>
         <h2>inhoud:</h2>
       <ul>
-        <li> <a href="page2.html">over mij </a> </li>
-          <li> <a href="page3.html">hobbies </a> </li>
+        <li> <a href="aboutme.html">over mij </a> </li>
+          <li> <a href="hobbies.html">hobbies </a> </li>
+          <li> <a href="socialmedia.html">social media </a> </li>
       </ul>
     </body>
 </html>
