--- a/aboutme.html
+++ b/aboutme.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>over mij</h1>
-        <p>ik ben Aleph Knobbout. ik ben 16 jaar oud. ik woon in goes en zit op het goese lyceum. </p>
+        <p>ik ben Aleph Knobbout. ik ben 16 jaar oud. ik woon in goes en zit op het goese lyceum in mijn vierde haar havo. </p>
         <img src="thumbnail_IMG_20200918_110601.jpg" alt="foto van mij" width="400" height="300">
     </body>
 </html>
