--- a/socialmedia.html
+++ b/socialmedia.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="nl">
+    <head>
+      <title>portfolio</title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="css/opmaak.css">
+    </head>
+    <body>
+      <a href="https://www.instagram.com/aleph.0113/">
+  <img src="instagram.pmg" alt="my instagram" height="128" width="128" />
+</a>
+  </body>
+</html>
