--- a/socialmedia.html
+++ b/socialmedia.html
@@ -7,7 +7,7 @@
     </head>
     <body>
       <a href="https://www.instagram.com/aleph.0113/">
-  <img src="instagram.pmg" alt="my instagram" height="128" width="128" />
+  <img src="instagram.png" alt="my instagram" height="128" width="128" />
 </a>
   </body>
 </html>
