--- a/socialmedia.html
+++ b/socialmedia.html
@@ -6,7 +6,7 @@
       <link rel="stylesheet" href="css/opmaak.css">
     </head>
     <body>
-      <a href="https://www.instagram.com/aleph.0113/"> target="_blank"
+      <a href="https://www.instagram.com/aleph.0113/" target="_blank">
   <img src="instagram.png" alt="my instagram" height="128" width="128" />
 </a>
   </body>
