--- a/socialmedia.html
+++ b/socialmedia.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-      <title>portfolio</title>
+      <title>social media/title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/opmaak.css">
     </head>
     <body>
+        <h1>klik op de afbeelding om naar de desbetreffende social media te gaan</h1>
       <a href="https://www.instagram.com/aleph.0113/" target="_blank">
   <img src="instagram.png" alt="my instagram" height="128" width="128" />
 </a>
