--- a/socialmedia.html
+++ b/socialmedia.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-      <title>social media/title>
+      <title>social media</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/opmaak.css">
     </head>
