--- a/socialmedia.html
+++ b/socialmedia.html
@@ -8,7 +8,10 @@
     <body>
         <h1 style="text-align:center">klik op de afbeelding om naar de desbetreffende social media te gaan</h1>
       <a href="https://www.instagram.com/aleph.0113/" target="_blank">
-  <img src="instagram.png" alt="my instagram" height="128" width="128" />
+  <img src="instagram.png" alt="my instagram" height="300" width="300" />
+</a>
+     <a href="snapchat.html" target="_blank">
+  <img src="snapchat.jpeg" alt="my snapchat" height="300" width="300" />
 </a>
   </body>
 </html>
