--- a/snapchat.html
+++ b/snapchat.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html lang="nl">
+    <head>
+      <title>mijn snapchat</title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="opmaak.css">
+    </head>
+    <body>
+      <h1 style="text-align:center">scan de snapcode hier onder om mij toe te voegen op snapchat</h1>
+      
+  </body>
+</html>
