--- a/snapchat.html
+++ b/snapchat.html
@@ -7,6 +7,7 @@
     </head>
     <body>
       <h1 style="text-align:center">scan de snapcode hier onder om mij toe te voegen op snapchat</h1>
+        <img style="text-align:center" src="snapcode.jpeg" alt="foto van mij" width="400" height="300">
       
   </body>
 </html>
