--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <body>
         <h1>mijn portfolio</h1>
         <h2>inhoud:</h2>
-      <ul>
-        <li> <a href="aboutme.html">over mij </a> </li>
-          <li> <a href="hobbies.html">hobbies </a> </li>
-          <li> <a href="socialmedia.html">social media </a> </li>
-      </ul>
+      <div class="dropdown">
+  <button onclick="myFunction()" class="dropbtn">inhoud</button>
+  <div id="myDropdown" class="dropdown-content">
+    <a href="aboutme.html">over mij</a>
+    <a href="hobbies.html">mijn hobbies</a>
+    <a href="socialmedia.html">social media</a>
+  </div>
+</div>
     </body>
 </html>
