--- a/socialmedia.html
+++ b/socialmedia.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1 style="text-align:center">klik op de afbeelding om naar de desbetreffende social media te gaan</h1>
-      <a href="https://www.instagram.com/aleph.0113/" target="_blank">
+      <a href="https://www.instagram.com/aleph0113/" target="_blank">
   <img src="instagram.png" alt="my instagram" height="300" width="300" />
 </a>
      <a href="snapchat.html" target="_blank">
