--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,39 @@
       <title>over mij</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/opmaak.css">
-    </head>
-    <body>
+    <style>
+        ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+</style>
+</head>
+<body>
+<ul>
+  <li><a href="aboutme.html">over mij</a></li>
+  <li><a href="hobbies.html">hobbies</a></li>
+  <li><a href="socialmedia.html">social media</a></li>
+  <li><a href="contact.html">contact</a></li>
+</ul>
         <h1>over mij</h1>
         <p>ik ben Aleph Knobbout. ik ben 16 jaar oud. ik woon in goes en zit op het goese lyceum in mijn vierde haar havo. </p>
         <img src="thumbnail_IMG_20200918_110601.jpg" alt="foto van mij" width="400" height="300">
