--- a/socialmedia.html
+++ b/socialmedia.html
@@ -4,8 +4,39 @@
       <title>social media</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="css/opmaak.css">
-    </head>
-    <body>
+    <style>
+    ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+</style>
+</head>
+<body>
+<ul>
+  <li><a href="aboutme.html">over mij</a></li>
+  <li><a href="hobbies.html">hobbies</a></li>
+  <li><a href="socialmedia.html">social media</a></li>
+  <li><a href="contact.html">contact</a></li>
+</ul>
         <h1 style="text-align:center">klik op de afbeelding om naar de desbetreffende social media te gaan</h1>
       <a href="https://www.instagram.com/aleph0113/" target="_blank">
   <img src="instagram.png" alt="my instagram" height="300" width="300" />
