--- a/socialmedia.html
+++ b/socialmedia.html
@@ -36,6 +36,7 @@ li a:hover {
   <li><a href="hobbies.html">hobbies</a></li>
   <li><a href="socialmedia.html">social media</a></li>
   <li><a href="contact.html">contact</a></li>
+  <li><a href="index.html">terug naar homepagina</a></li>
 </ul>
         <h1 style="text-align:center">klik op de afbeelding om naar de desbetreffende social media te gaan</h1>
       <a href="https://www.instagram.com/aleph0113/" target="_blank">
