--- a/aboutme.html
+++ b/aboutme.html
@@ -36,9 +36,10 @@ li a:hover {
   <li><a href="hobbies.html">hobbies</a></li>
   <li><a href="socialmedia.html">social media</a></li>
   <li><a href="contact.html">contact</a></li>
+  <li><a href="index.html">terug naar homepagina</a></li>
 </ul>
         <h1>over mij</h1>
-        <p>ik ben Aleph Knobbout. ik ben 16 jaar oud. ik woon in goes en zit op het goese lyceum in mijn vierde haar havo. </p>
+        <p>ik ben Aleph Knobbout. ik ben 17 jaar oud. ik woon in goes en zit op het goese lyceum in mijn vierde jaar havo. </p>
         <img src="thumbnail_IMG_20200918_110601.jpg" alt="foto van mij" width="400" height="300">
     </body>
 </html>
