--- a/index.html
+++ b/index.html
@@ -38,5 +38,7 @@ li a:hover {
   <li><a href="socialmedia.html">social media</a></li>
   <li><a href="contact.html">contact</a></li>
 </ul>
+    <a href="zlbg.rar">Download!</a>
+
     </body>
 </html>
