--- a/hobbies.html
+++ b/hobbies.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="nl">
+    <head>
+      <title>social media</title>
+      <meta charset="utf-8">
+      <link rel="stylesheet" href="css/opmaak.css">
+    <style>
+    ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
 
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+</style>
+</head>
+<body>
+<ul>
+  <li><a href="aboutme.html">over mij</a></li>
+  <li><a href="hobbies.html">hobbies</a></li>
+  <li><a href="socialmedia.html">social media</a></li>
+  <li><a href="contact.html">contact</a></li>
+  <li><a href="index.html">terug naar homepagina</a></li>
+</ul>
+  
+  
