--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="nl">
     <head>
-      <title>portfolio</title>
+      <title>POHTML</title>
       <meta charset="utf-8">
       <link rel="stylesheet" href="opmaak.css">
     </head>
