--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         Body {  
   font-family: Calibri, Helvetica, sans-serif;  
-  background-color: pink;  
+  background-color: grey;  
 }  
 button {   
        background-color: #4CAF50;   
@@ -80,11 +80,11 @@ li a:hover {
     <form>  
         <div class="container">   
             <label>Username : </label>   
-            <input type="text" placeholder="Enter Username" name="username" required>  
+            <input type="text" placeholder="vul gebruikersnaam in" name="gebruikersnaam" required>  
             <label>Password : </label>   
-            <input type="password" placeholder="Enter Password" name="password" required>  
+            <input type="password" placeholder="vul wachtwoord in" name="wachtwoord" required>  
             <button type="submit">Login</button>   
-            <input type="checkbox" checked="checked"> Remember me   
+            <input type="checkbox" checked="checked"> onthoud mij   
             <button type="button" class="cancelbtn"> Cancel</button>   
             Forgot <a href="#"> password? </a>   
         </div>   
