--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@ li a:hover {
             <input type="password" placeholder="vul wachtwoord in" name="wachtwoord" required>  
             <button type="submit">Login</button>   
             <input type="checkbox" checked="checked"> onthoud mij   
-            <button type="button" class="cancelbtn"> Cancel</button>   
-            Forgot <a href="#"> password? </a>   
+            <button type="button" class="cancelbtn"> annuleren</button>   
+             <a href="#"> registreren </a>   
         </div>   
     </form>     
     </body>
